[package]
name = "io_uring_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.11.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.3"
libc = "0.2.167"

[dev-dependencies]
tempfile = "3.15.0"
